--- a/dgom.html
+++ b/dgom.html
@@ -787,7 +787,7 @@ function landOnMars() {
       // Deliver gold
       state.goldOnMars += GOLD_PER_LOAD;
       state.goldOnEarth -= GOLD_PER_LOAD;
-      state.goldPrice = (100 + (state.goldOnMars / 300000) * state.tripCount) * 163000000;
+      state.goldPrice = state.goldPrice * 10;
       state.rocketStatus = 'unloaded';
       state.phase = 'idle';
       state.showMessage = true;
